# Polylla-Mesh

./: .gitignore  BET_elimitation.cpp  BET_elimitation.h  CMakeLists.txt  README.md  SmallestEnclosingCircle.hpp  consts.h  delaunay.cpp  delaunay.h  io.cpp  main.cpp  mesh.h  metrics.cpp  metrics.h  polygon.cpp  polygon.h  test.sh  triang.cpp  triang.h
DataGenerationScripts/: 2x2QuarterCircleUniform.py  2x2QuaterCircle.py  Lrandom.py  Lrandom_centerinsertion.py  Luniform_centerinsertion.py  R2DiskRandom.py  R2DiskSemiuniform.py
DataScripts/: 2x2RandomPoints.py  Luniform.py  R2DiskRandom.py
DataScripts/input/: 2x2RPDisk_1000.poly
detri2/: CMakeLists.txt  adapt.cpp  detri2.cpp  detri2.h  detri2_call.cpp  flips.cpp  io.cpp  refine.cpp  voronoi.cpp
detri2_old/: CMakeLists.txt  detri2.h  io.cpp  main.cpp
include/: delaunay.h  hashtable.h  io.h  polygon.h
include/SmallestEnclosingCircle/: CMakeLists.txt
scripts/: 10000x10000RandomPoints.py  Polylla  PolyllaCUDA  generatetrivertex.cu  generatetrivertexnocuda.cpp  planar_embedding10.1.ele  planar_embedding10.1.neigh  planar_embedding10.1.node  planar_embedding10.1.trivertex  planar_embedding10.node  randomdata.sh  randomdata2.sh  resultsCUDA.txt  resultsCUDA2.txt  resultsCUDA3_nontrivertex.txt  resultsCUDA_non_trivertex.txt  resultsSEQ.txt  resultsSEQ2_nontrivertex.txt  resultsSEQ3_nontrivertex.txt  resultsSEQ_non_trivertex.txt  test.sh
src/: BET_elimitation.cpp  CMakeLists.txt  SmallestEnclosingCircle.cpp  delaunay.cpp  hashtable.cpp  io.cpp  mesh.cpp  polygon.cpp  triang.cpp
